fix overlap of content on tablets

--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ p {
 }
 .content-wrapper {
     position: relative;
-    margin: 6vh auto 0;
+    margin: 12vh auto 0;
     width: 90%;
     color: #fff;
     font-weight: 300;
